@@ -8,6 +8,8 @@ Changes for 1.3.8
       hidden triangles
    Change Hide Unselected so that it operates on the face level rather than
       face and vertex
+   Add group clean-up window that removes identical/unused groups and
+      materials
    Show dimensions of selected geometry in context panel
    Added grid unit distance to status bar
    In MD3, use anim name + frame num for frame name on export
